force-app/main/default/objects/Lead/fields/UniqueEntry__ZoomInfo_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__ZoomInfo_Company_ID__c</fullName>
    <label>ZoomInfo Company ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>