force-app/main/default/objects/Lead/fields/Warehouse_Management_System__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Management_System__c</fullName>
    <label>Warehouse Mgmt (WMS)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WMS</valueSetName>
    </valueSet>
</CustomField>