force-app/main/default/objects/Lead/fields/Webinar_Attended__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Attended__c</fullName>
    <description>If they attended a webinar, the name of it should be here</description>
    <inlineHelpText>If they attended a webinar, the name of it should be here</inlineHelpText>
    <label>Webinar Attended</label>
    <length>150</length>
    <type>Text</type>
</CustomField>