force-app/main/default/objects/Lead/fields/X5_Minute_SLA__c.field-meta.xml
<CustomField>
    <fullName>X5_Minute_SLA__c</fullName>
    <formula>LastModifiedDate  - 0.038194444</formula>
    <label>5 Minute SLA</label>
    <type>DateTime</type>
</CustomField>