force-app/main/default/objects/Lead/fields/ZoomInfo_ERP__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_ERP__c</fullName>
    <label>ZoomInfo ERP</label>
    <type>TextArea</type>
</CustomField>