force-app/main/default/objects/Lead/recordTypes/Partner.recordType-meta.xml
<RecordType>
    <fullName>Partner</fullName>
    <active>false</active>
    <businessProcess>Default Lead</businessProcess>
    <label>Partner</label>
</RecordType>