force-app/main/default/objects/Lead/validationRules/Industry_required_on_conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Industry_required_on_conversion</fullName>
    <active>false</active>
    <description>Requires the industry field when Lead is converted</description>
    <errorConditionFormula>AND(IsConverted &amp;&amp; ISPICKVAL(Industry, &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Industry</errorDisplayField>
    <errorMessage>Please select an Industry</errorMessage>
</ValidationRule>