force-app/main/default/objects/Lead/validationRules/Rejection_Notes_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Notes_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status)
&amp;&amp; CONTAINS(Text(Status),&quot;Rejected&quot;)
&amp;&amp; ISBLANK(Rejection_Notes__c)</errorConditionFormula>
    <errorMessage>Rejection Notes are required when moving Status to &apos;Rejected&apos;</errorMessage>
</ValidationRule>