force-app/main/default/objects/Lead/validationRules/Return_To_Marketing.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_To_Marketing</fullName>
    <active>false</active>
    <description>Does not allow the status of Return to Marketing unless Return to Marketing Reason is populated</description>
    <errorConditionFormula>AND (
ISPICKVAL(Status, &apos;Nurture - Marketing&apos;),
ISPICKVAL( Return_to_Marketing_Reason__c , &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Return_to_Marketing_Reason__c</errorDisplayField>
    <errorMessage>Please select a Return to Marketing Reason.</errorMessage>
</ValidationRule>