force-app/main/default/objects/Lead/listViews/AJ_Leads.listView-meta.xml
<ListView>
    <fullName>AJ_Leads</fullName>
    <columns>pi__campaign__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>akadz</value>
    </filters>
    <label>AJ - Leads</label>
</ListView>