force-app/main/default/objects/Lead/listViews/All_Unqualified_Leads.listView-meta.xml
<ListView>
    <fullName>All_Unqualified_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Hubspot_Lifecycle_Stage__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <label>All Unqualified Leads</label>
    <sharedTo></sharedTo>
</ListView>