force-app/main/default/objects/Lead/listViews/All_Unviewed_Leads.listView-meta.xml
<ListView>
    <fullName>All_Unviewed_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Product_Line_s__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Unviewed Leads</label>
</ListView>