force-app/main/default/objects/Lead/listViews/BC_Practice_Lead_List.listView-meta.xml
<ListView>
    <fullName>BC_Practice_Lead_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Hubspot_Lifecycle_Stage__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Subsource__c</columns>
    <columns>Marketing_Persona__c</columns>
    <columns>LEAD.INDUSTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CONVERTED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Converted - Dead,Converted</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>contains</operation>
        <value>Houtz,Abbott,Williams</value>
    </filters>
    <label>BC Practice - Open Lead List</label>
</ListView>