force-app/main/default/objects/Lead/listViews/Daves_Leads.listView-meta.xml
<ListView>
    <fullName>Daves_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Hubspot_Lifecycle_Stage__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Mitch</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Return to Marketing</value>
    </filters>
    <label>Dave&apos;s Leads</label>
    <sharedTo></sharedTo>
</ListView>