force-app/main/default/objects/Lead/listViews/Enlyft_Jeff_H.listView-meta.xml
<ListView>
    <fullName>Enlyft_Jeff_H</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Houtz</value>
    </filters>
    <label>Enlyft - Jeff H</label>
    <sharedTo>
        <role>SDR</role>
        <role>Territory_Manager</role>
    </sharedTo>
</ListView>