force-app/main/default/objects/Lead/listViews/Kelli_s_Enlyft_Leads.listView-meta.xml
<ListView>
    <fullName>Kelli_s_Enlyft_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Kelli</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Return to Marketing</value>
    </filters>
    <filters>
        <field>LEAD.LAST_ACTIVITY</field>
        <operation>notEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Kelli&apos;s Enlyft Leads</label>
</ListView>