force-app/main/default/objects/Lead/listViews/Kevin_November_2019_Call_List.listView-meta.xml
<ListView>
    <fullName>Kevin_November_2019_Call_List</fullName>
    <columns>Authorized_Signer_Name__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pi__campaign__c</field>
        <operation>contains</operation>
        <value>Kevin</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Kevin - November 2019 Call List</label>
    <sharedTo>
        <role>Territory_Manager</role>
    </sharedTo>
</ListView>