force-app/main/default/objects/Lead/listViews/Marketing_Leads_In_Progress.listView-meta.xml
<ListView>
    <fullName>Marketing_Leads_In_Progress</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Hubspot_Lifecycle_Stage__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line_s__c</field>
        <operation>notEqual</operation>
        <value>Desktop,Cloud,Custom,Other</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/31/2019 12:00 AM</value>
    </filters>
    <label>Marketing Leads In Progress</label>
</ListView>