force-app/main/default/objects/Lead/listViews/My_Enlyft_Leads.listView-meta.xml
<ListView>
    <fullName>My_Enlyft_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>pi__campaign__c</field>
        <operation>contains</operation>
        <value>Enlyft</value>
    </filters>
    <label>My Enlyft Leads</label>
</ListView>